Se ha subido un patch para gestionar el número de replicas

--- a/production/kustomization.yaml
+++ b/production/kustomization.yaml
@@ -4,3 +4,6 @@ bases:
 images:
 - name: quay.io/dsanchor/quarkus-petclinic
   newTag: 1.0.1
+
+patchesStrategicMerge:
+  - patches/petclinic-deployment-replicas-override.yaml
